--- a/index.html
+++ b/index.html
@@ -4,28 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google Homepage</title>
+    <title>My Google-Homepage</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="body-grid">
-    <div class="top-bar">
-        <div></div>
-        <div class="items">Gmail</div>
-        <div class="items">Images</div>
-        <div class="items"><img style="width: 10px; height: 10px; object-fit: cover; object-position: 50% 50%;" src="https://ssl.gstatic.com/gb/images/i1_1967ca6a.png" alt=""></div>
-        <div class="items">P</div>
+<body>
+    <nav>
+        <a href="">Gmail</a>
+        <a href="">Image</a>
+        <a href="">L</a>
+        <a href="">P</a>
+    </nav>
+    <div class="content">
+        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Image Not Available">
+        <form action="">
+            <input type="text" name="" id="" placeholder="Search">
+        </form>
+        <div class="buttons">
+            <button><a href="">Google Search</a></button>
+            <button><a href="">I'm Feeling Lucky</a></button>
+        </div>       
+    </div>  
+    <div class="bottom">
+        <footer>
+            <a href="">About</a>
+            <a href="">Advertising</a>
+            <a href="">Business</a>
+            <a href="">How Search Works</a>
+            <a href="">Privacy</a>
+            <a href="">Terms</a>
+            <a href="">Settings</a>
+        </footer>
     </div>
-    <div class="middle">
-        <div></div>
-        <main class="main">
-            <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="">
-                <form action="">
-                    <input type="text">
-                </form>
-                <div></div>
-        </main>
-        <div></div>
-    </div>
-    <footer class="footer"></footer>
 </body>
 </html>
